--- a/clusters/test1/infr-apps/velero.yaml
+++ b/clusters/test1/infr-apps/velero.yaml
@@ -92,6 +92,8 @@ spec:
               provider: aws
           credentials:
             useSecret: false
+          rbac:
+            clusterAdministrator: false
           schedules:
             k8s-spb2-backend1:
               disabled: false
