--- a/clusters/test1/infr-apps/velero.yaml
+++ b/clusters/test1/infr-apps/velero.yaml
@@ -12,6 +12,8 @@ spec:
     syncOptions:
     - FailOnSharedResource=false
     - CreateNamespace=true
+    - ServerSideApply=true
+    - Replace=true
   project: default
   destination:
     name: kind-test-1
@@ -93,7 +95,31 @@ spec:
           credentials:
             useSecret: false
           rbac:
+            create: false
             clusterAdministrator: false
+          extraObjects:
+            - apiVersion: rbac.authorization.k8s.io/v1
+              kind: Role
+              metadata:
+                name: velero-server
+                namespace: velero
+              rules:
+                - apiGroups: ["*"]
+                  resources: ["*"]
+                  verbs: ["*"]
+            - apiVersion: rbac.authorization.k8s.io/v1
+              kind: RoleBinding
+              metadata:
+                name: velero-server
+                namespace: velero
+              roleRef:
+                apiGroup: rbac.authorization.k8s.io
+                kind: Role
+                name: velero-server
+              subjects:
+                - kind: ServiceAccount
+                  name: velero-server
+                  namespace: velero
           schedules:
             k8s-spb2-backend1:
               disabled: false
