--- a/clusters/test3/custom-resource/clusterrole.yaml
+++ b/clusters/test3/custom-resource/clusterrole.yaml
@@ -56,10 +56,10 @@ rules:
     verbs: ["create", "get", "list", "watch", "patch"]
   - apiGroups: ["rbac.authorization.k8s.io"]
     resources: ["clusterrolebindings"]
-    verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
+    verbs: ["create", "update", "patch", "get", "list", "watch"]
   - apiGroups: ["rbac.authorization.k8s.io"]
     resources: ["clusterroles"]
-    verbs: ["bind", "get", "update", "patch", "create", "escalate", "list", "watch", "delete"]
+    verbs: ["bind", "get", "update", "patch", "create", "escalate", "list", "watch"]
   - apiGroups: [""]
     resources: ["pods", "configmaps"]
     verbs: ["delete", "get", "list", "watch"]
