--- a/shared/jit-rbac/post-hook.yaml
+++ b/shared/jit-rbac/post-hook.yaml
@@ -35,14 +35,17 @@ spec:
           - |
             set -euo pipefail
             echo "Starting PostSync cleanup for ${JIT_RBAC_APP} at $(date -u +%FT%TZ)";
+            
+            CRB_NAME=$(kubectl get clusterrolebinding -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} -o jsonpath='{.items[0].metadata.name}' 2>/dev/null || echo "");
             ROLE_NAME=$(kubectl get clusterrolebinding -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} -o jsonpath='{.items[0].roleRef.name}' 2>/dev/null || echo "");
             
             if [ -z "${ROLE_NAME}" ]; then
-              echo "No ClusterRoleBinding found for ${JIT_RBAC_APP}, skipping cleanup";
-              exit 0;
+              ROLE_NAME=$(kubectl get clusterrole -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} -o jsonpath='{.items[0].metadata.name}' 2>/dev/null || echo "");
+              if [ -z "${ROLE_NAME}" ]; then
+                echo "No ClusterRole or ClusterRoleBinding found for ${JIT_RBAC_APP}, skipping cleanup";
+                exit 0;
+              fi
             fi
-
-            CRB_NAME=$(kubectl get clusterrolebinding -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} -o jsonpath='{.items[0].metadata.name}' 2>/dev/null || echo "");
             
             if [ -n "${CRB_NAME}" ]; then
               echo "Removing finalizers from ClusterRoleBinding: ${CRB_NAME}";
@@ -52,8 +55,10 @@ spec:
               kubectl delete clusterrolebinding "${CRB_NAME}" --ignore-not-found=true || true;
             fi
             
-            echo "Clearing rules in ClusterRole: ${ROLE_NAME}";
-            kubectl patch clusterrole "${ROLE_NAME}" --type=merge -p '{"rules": []}' --ignore-not-found=true || echo "Warning: Failed to patch ClusterRole";
+            if [ -n "${ROLE_NAME}" ]; then
+              echo "Clearing rules in ClusterRole: ${ROLE_NAME}";
+              kubectl patch clusterrole "${ROLE_NAME}" --type=merge -p '{"rules": []}' --ignore-not-found=true || echo "Warning: Failed to patch ClusterRole";
+            fi
             
             CRONJOB_NAME="${JIT_RBAC_APP}-cleanup-cron";
             echo "Deleting CronJob: ${CRONJOB_NAME}";
