--- a/shared/jit-rbac/pre-hook-cron.yaml
+++ b/shared/jit-rbac/pre-hook-cron.yaml
@@ -16,7 +16,7 @@ spec:
   failedJobsHistoryLimit: 1
   concurrencyPolicy: Forbid
   suspend: false
- # startingDeadlineSeconds: 15
+  startingDeadlineSeconds: 2
   jobTemplate:
     spec:
       backoffLimit: 0
