--- a/shared/jit-rbac/pre-hook-cron.yaml
+++ b/shared/jit-rbac/pre-hook-cron.yaml
@@ -11,12 +11,12 @@ metadata:
     app.kubernetes.io/part-of: argo-jit-rbac
     jit-rbac/app: APP_NAME_PLACEHOLDER
 spec:
-  schedule: "*/5 * * * *"
+  schedule: "3/5 * * * *"
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 1
   concurrencyPolicy: Forbid
   suspend: false
-  startingDeadlineSeconds: 2
+  startingDeadlineSeconds: 15
   jobTemplate:
     spec:
       backoffLimit: 0
