--- a/shared/jit-rbac/pre-hook-cron.yaml
+++ b/shared/jit-rbac/pre-hook-cron.yaml
@@ -44,18 +44,21 @@ spec:
                 
                 CRB_INFO=$(kubectl get clusterrolebinding -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} -o jsonpath='{range .items[*]}{.metadata.name}{"\t"}{.metadata.creationTimestamp}{"\n"}{end}' 2>/dev/null | head -1);
                 
+                SKIP_CLEANUP=false
                 if [ -n "${CRB_INFO}" ]; then
                   IFS=$'\t' read -r crb_name crb_ct <<< "${CRB_INFO}";
                   crb_epoch=$(date -u -d "${crb_ct}" +%s 2>/dev/null || echo 0);
                   if [ "${crb_epoch}" != "0" ]; then
                     age_min=$(( (now_epoch - crb_epoch) / 60 ));
                     if [ ${age_min} -lt ${MIN_AGE_MINUTES} ]; then
-                      :
+                      SKIP_CLEANUP=true
                     fi
                   fi
                 fi
                 
-                kubectl delete pod -n kube-system -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} --field-selector=status.phase=Succeeded --ignore-not-found=true || true;
+                if [ "${SKIP_CLEANUP}" = "false" ]; then
+                  kubectl delete pod -n kube-system -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} --field-selector=status.phase=Succeeded --ignore-not-found=true || true;
+                fi
                 echo "Cleanup completed at $(date -u +%FT%TZ)";
             env:
             - name: JIT_RBAC_APP
