--- a/shared/jit-rbac/pre-hook-cron.yaml
+++ b/shared/jit-rbac/pre-hook-cron.yaml
@@ -37,12 +37,25 @@ spec:
             args:
               - |
                 set -euo pipefail
-                echo "Starting cleanup at $(date -u +%FT%TZ)";
+                echo "Starting per-app cleanup for ${JIT_RBAC_APP} at $(date -u +%FT%TZ)";
                 
-                CRB_EXISTS=$(kubectl get clusterrolebinding -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} -o name 2>/dev/null || echo "");
-                kubectl delete pod -n kube-system -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} --field-selector=status.phase=Succeeded --ignore-not-found=true || true;
+                AGE_THRESHOLD_MIN=${AGE_THRESHOLD_MIN:-3}
+                now_epoch=$(date -u +%s)
                 
-                echo "Cleanup completed at $(date -u +%FT%TZ)";
+                CRB_INFO=$(kubectl get clusterrolebinding -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} \
+                  -o jsonpath='{.items[0].metadata.name}{"\t"}{.items[0].metadata.creationTimestamp}{"\n"}' 2>/dev/null || echo "");
+                
+                if [ -n "${CRB_INFO}" ]; then
+                  IFS=$'\t' read -r crb_name crb_ct <<< "${CRB_INFO}"
+                  crb_epoch=$(date -u -d "${crb_ct}" +%s 2>/dev/null || echo 0)
+                  
+                  if [ "${crb_epoch}" != "0" ]; then
+                    age_min=$(( (now_epoch - crb_epoch) / 60 ))
+                
+                timeout 30 kubectl delete pod -n kube-system -l app.kubernetes.io/part-of=argo-jit-rbac,jit-rbac/app=${JIT_RBAC_APP} \
+                  --field-selector=status.phase=Succeeded --ignore-not-found=true --force --grace-period=0 || true;
+                
+                echo "Per-app cleanup completed for ${JIT_RBAC_APP} at $(date -u +%FT%TZ)";
             env:
             - name: JIT_RBAC_APP
               valueFrom:
