--- a/shared/jit-rbac/kustomization.yaml
+++ b/shared/jit-rbac/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - pre-hook-cron.yaml
   - pre-hook-rbac.yaml
+  - pre-hook-cron.yaml
+  - pre-hook-verify.yaml
   - post-hook.yaml
