--- a/shared/jit-rbac/pre-hook-verify.yaml
+++ b/shared/jit-rbac/pre-hook-verify.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: kube-system
   annotations:
     argocd.argoproj.io/hook: PreSync
-    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
     argocd.argoproj.io/sync-wave: "0"
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
