--- a/shared/jit-rbac/kustomization.yaml
+++ b/shared/jit-rbac/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - pre-hook-cron.yaml
-  - pre-hook-rbac.yaml
+  # - pre-hook-rbac.yaml
   - post-hook.yaml
