--- a/clusters/test3/infr-apps/certmanager.yaml
+++ b/clusters/test3/infr-apps/certmanager.yaml
@@ -47,6 +47,14 @@ spec:
                 value: k8s-spb2-backend3-certmanager-cleanup-cron
           - target:
               kind: Job
+              annotationSelector: argocd.argoproj.io/hook=PreSync
+            patch: |-
+              - op: replace
+                path: /metadata/name
+                value: k8s-spb2-backend3-certmanager-validate-rbac
+          - target:
+              kind: Job
+              annotationSelector: argocd.argoproj.io/hook=PostSync
             patch: |-
               - op: replace
                 path: /metadata/name
