--- a/shared/jit-rbac/kustomization.yaml
+++ b/shared/jit-rbac/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - pre-hook-cr.yaml
-  - pre-hook-crb.yaml
-  - pre-hook-cron.yaml
+  - pre-hook.yaml
+  - pre-hook-validate.yaml
   - post-hook.yaml
