--- a/shared/jit-rbac/kustomization.yaml
+++ b/shared/jit-rbac/kustomization.yaml
@@ -2,5 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - pre-hook.yaml
-  - pre-hook-validate.yaml
+  # - pre-hook-cr.yaml
+  # - pre-hook-crb.yaml
+  # - pre-hook-cron.yaml
   - post-hook.yaml
