--- a/shared/jit-rbac/kustomization.yaml
+++ b/shared/jit-rbac/kustomization.yaml
@@ -2,7 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - pre-hook.yaml
-  # - pre-hook-cr.yaml
-  # - pre-hook-crb.yaml
-  # - pre-hook-cron.yaml
+  - pre-hook-wait.yaml
   - post-hook.yaml
