--- a/shared/jit-rbac/post-hook.yaml
+++ b/shared/jit-rbac/post-hook.yaml
@@ -10,6 +10,7 @@ metadata:
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
     jit-rbac/app: APP_NAME_PLACEHOLDER
+    jit-rbac/type: cleanup
 spec:
   backoffLimit: 0
   ttlSecondsAfterFinished: 60
