--- a/shared/jit-rbac/pre-hook-wait.yaml
+++ b/shared/jit-rbac/pre-hook-wait.yaml
@@ -8,6 +8,7 @@ metadata:
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
     jit-rbac/app: APP_NAME_PLACEHOLDER
+    jit-rbac/type: wait
 spec:
   backoffLimit: 0
   ttlSecondsAfterFinished: 60
