--- a/shared/jit-rbac/pre-hook.yaml
+++ b/shared/jit-rbac/pre-hook.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ROLE_NAME_PLACEHOLDER
   annotations:
     argocd.argoproj.io/hook: PreSync
-    # argocd.argoproj.io/hook-delete-policy: HookFailed
+    argocd.argoproj.io/hook-delete-policy: HookFailed
     argocd.argoproj.io/sync-wave: "-4"
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
@@ -17,7 +17,7 @@ metadata:
   name: ROLE_NAME_PLACEHOLDER
   annotations:
     argocd.argoproj.io/hook: PreSync
-    # argocd.argoproj.io/hook-delete-policy: HookFailed
+    argocd.argoproj.io/hook-delete-policy: HookFailed
     argocd.argoproj.io/sync-wave: "-3"
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
@@ -49,7 +49,6 @@ spec:
   failedJobsHistoryLimit: 1
   concurrencyPolicy: Forbid
   suspend: false
-#  startingDeadlineSeconds: 0
   jobTemplate:
     spec:
       backoffLimit: 0
@@ -82,3 +81,36 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.labels['jit-rbac/app']
+---
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: APP_NAME_PLACEHOLDER-wait
+  namespace: kube-system
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
+  labels:
+    app.kubernetes.io/part-of: argo-jit-rbac
+    jit-rbac/app: APP_NAME_PLACEHOLDER
+    jit-rbac/type: wait
+spec:
+  backoffLimit: 0
+  ttlSecondsAfterFinished: 60
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/part-of: argo-jit-rbac
+        jit-rbac/app: APP_NAME_PLACEHOLDER
+    spec:
+      serviceAccountName: argocd-manager
+      restartPolicy: Never
+      containers:
+      - name: wait
+        image: bitnami/kubectl:latest
+        imagePullPolicy: IfNotPresent
+        command: ["/bin/sh", "-c"]
+        args:
+          - |
+            echo "Waiting 5 seconds for RBAC propagation at $(date -u +%FT%TZ)"
+            sleep 5
+            echo "Wait completed at $(date -u +%FT%TZ)"
