--- a/shared/jit-rbac/pre-hook-wait.yaml
+++ b/shared/jit-rbac/pre-hook-wait.yaml
@@ -4,7 +4,9 @@ metadata:
   name: APP_NAME_PLACEHOLDER-wait
   namespace: kube-system
   annotations:
-    argocd.argoproj.io/sync-wave: "-1"
+    argocd.argoproj.io/hook: Sync
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    argocd.argoproj.io/sync-wave: "1"
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
     jit-rbac/app: APP_NAME_PLACEHOLDER
