--- a/shared/jit-rbac/pre-hook-rbac.yaml
+++ b/shared/jit-rbac/pre-hook-rbac.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     argocd.argoproj.io/hook: PreSync
     argocd.argoproj.io/hook-delete-policy: HookFailed
-    argocd.argoproj.io/sync-wave: "-3"
+    argocd.argoproj.io/sync-wave: "-1"
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
     jit-rbac/app: APP_NAME_PLACEHOLDER
@@ -16,7 +16,9 @@ kind: ClusterRoleBinding
 metadata:
   name: ROLE_NAME_PLACEHOLDER
   annotations:
-    argocd.argoproj.io/sync-wave: "-2"
+    argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/hook-delete-policy: HookFailed
+    argocd.argoproj.io/sync-wave: "-1"
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
     jit-rbac/app: APP_NAME_PLACEHOLDER
